<resources>
    <string name="app_name">Lab 6</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="previous">Previous</string>
    <string name="hello">Good morning</string>
    <string name="genres">Your top genres</string>
    <string name="yourlib">Your library</string>
    <string name="gen1">OSTs</string>
    <string name="gen2">Openings</string>
    <string name="gen3">Endings</string>
    <string name="gen4">AMVs</string>
    <string name="favorite">Add Favorite</string>
    <string name="user">Alejandro Martinez - 21430</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>